compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_local_variable_guard_clause.snap
---
source: compiler-core/src/language_server/tests/rename.rs
assertion_line: 140
expression: "\npub fn main() {\n  let wibble = True\n  case Nil {\n    Nil if wibble -> todo\n    _ -> panic\n  }\n  wibble || False\n}\n"
snapshot_kind: text
---
----- BEFORE RENAME

pub fn main() {
  let wibble = True
  case Nil {
    Nil if wibble -> todo
    _ -> panic
  }
  wibble || False
  ↑
}


----- AFTER RENAME

pub fn main() {
  let wobble = True
  case Nil {
    Nil if wobble -> todo
    _ -> panic
  }
  wobble || False
}
