compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_alias_from_select.snap
---
source: compiler-core/src/language_server/tests/rename.rs
assertion_line: 1440
expression: "\nimport mod\n\npub fn main() {\n    mod.function()\n    mod.other_function()\n}\n"
snapshot_kind: text
---
----- BEFORE RENAME
-- mod.gleam

pub fn function() {
    function()
}

pub fn other_function() {
    function()
}


-- app.gleam

import mod

pub fn main() {
    mod.function()
    ↑▔▔           
    mod.other_function()
}


----- AFTER RENAME
-- mod.gleam

pub fn function() {
    function()
}

pub fn other_function() {
    function()
}


-- app.gleam

import mod as module

pub fn main() {
    module.function()
    module.other_function()
}
