compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_clause_guard.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import mod\nfn func(arg: Int) {\n  case arg {\n    x if x == mod.const1 -> todo\n    _ -> todo\n  }\n}"
---
----- BEFORE RENAME
-- mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import mod
fn func(arg: Int) {
  case arg {
    x if x == mod.const1 -> todo
              ↑▔▔               
    _ -> todo
  }
}


----- AFTER RENAME
-- mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import mod as module
fn func(arg: Int) {
  case arg {
    x if x == module.const1 -> todo
    _ -> todo
  }
}
